welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:4: error: type mismatch;
 found   : Unit
 required: Int
	for(c<- 0 to (Taille-1)){
             ^